# Chess-Game-Private

./: .gitignore  README.md  TODO  requirements.txt  run.sh
CHESS/Scripts/: activate  activate.bat
backend/: Dockerfile.backend  requirements.txt
backend/CHESS/: pyvenv.cfg
backend/CHESS/Scripts/: activate  activate.bat
backend/app/: main.py  test_import.py
backend/app/chess_engine/: main.cpp
backend/app/chess_engine/bindings/: bindings.cpp
backend/app/chess_engine/src/: game.cpp
backend/app/core/: __init__.py  config.py
backend/app/models/: game.py
backend/app/routers/: game.py  websockets.py
backend/app/schemas/: __init__.py  game.py
backend/app/service/: connection_manager.py  game_service.py
backend/app/services/: connection_manager.py  game_service.py
backend/tests/: test_main.py  test_main2.py  test_route_game.py  test_route_lobby.py  test_unit_tests.py
chess-frontend/: package-lock.json  package.json
chess-frontend/src/: index.js
chess_engine/: CMakeLists.txt  test.cpp  test2.cpp
chess_engine/bindings/: bindings.cpp
chess_engine/src/: Chess_Piece.cpp  Move.cpp  game.cpp  game.h
frontend/: game_logic.py  index.html
source/chess_engine/: CMakeLists.txt
